--- a/D1/index.html
+++ b/D1/index.html
@@ -10,8 +10,8 @@
         <header>
             <h1>tytuł strony</h1>
         </header>
-        <section>
-            <p>baner reklamowy</p>
+        <section.class="banner">
+            <img src="img/banner.jpg" alt="banner">
         </section>
         
         <nav>
@@ -42,7 +42,7 @@
             <div class="photo"><img src="img/photo8.jpg" alt="photo8"></div>
             <button>zobacz więcej</button>
         <footer>
-            <a href="#" class="facebook"></a>
+            <a href=   "#" class="facebook"></a>
             <a href="#" class="instagram"></a>
             <a href="#" class="twitter"></a>
             <a href="#" class="youtube"></a>
